--- a/configs/config_simple.yaml
+++ b/configs/config_simple.yaml
@@ -15,4 +15,54 @@ data:
     positive_only: false
     num_workers: 0
     num_samples: null
+optimizer:
+  class_path: torch.optim.Adam
+  init_args:
+    lr: 0.001
+    weight_decay: 0.0001
+trainer:
+  max_epochs: 1
+  deterministic: true
+  logger:
+    class_path: pytorch_lightning.loggers.MLFlowLogger
+    init_args:
+      experiment_name: 'simple'
+      run_name: 'simple0'
+      tracking_uri: 'http://localhost:8080'
+      save_dir: './mlruns'
+  enable_checkpointing: true
+  callbacks:
+    - class_path: gLM.callbacks.OutputLoggingCallback
+      init_args:
+        log_every_n_steps: 1
+    - class_path: gLM.callbacks.LogClassificationMetrics
+      init_args:
+        class_names:
+        - 'Negative'
+        - 'Positive'
+        y_pred_key: predictions
+        y_true_key: label
+        make_one_hot: true
+        invert_probabilities: true
+        make_correct_dim: true
+        metrics_to_plot:
+          - confusion_matrix
+          - pr
+          - pr_curve
+          - roc
+          - roc_curve
+          - class_proportions
+          - calibration_curves
+          - classification_report
+    - class_path: pytorch_lightning.callbacks.ModelCheckpoint
+      init_args:
+        dirpath: logs/checkpoints/optimized/
+        filename: model-{epoch}
+        monitor: val/loss
+        mode: min
+        save_last: true
+        save_top_k: 1
+
+
+
 
