Edited configuration file for mlflow runs (might never be used, but in case). Removed train_epoch_end prediction table. Added test sbatch script.

--- a/configs/config_simple.yaml
+++ b/configs/config_simple.yaml
@@ -28,7 +28,7 @@ trainer:
     init_args:
       experiment_name: 'simple'
       run_name: 'simple0'
-      save_dir: './mlruns'
+      save_dir: './logs/mlruns'
   enable_checkpointing: true
   callbacks:
     - class_path: gLM.callbacks.OutputLoggingCallback
