Added missing module to install, adjusted the code to compute the performance metrics. Included the gpu sbatch script for testing.

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,7 +10,7 @@ model:
 data:
     class_path: gLM.dataloader.SequencePairDataModule
     init_args:
-        fasta_file: ./data/Bernett2022human_swissprot_oneliner.fasta
+        fasta_file: ./data/Bernett2022/human_swissprot_oneliner.fasta
         data_folder: ./data/Bernett2022/
         batch_size: 4096
         positive_only: false
@@ -30,7 +30,7 @@ trainer:
             save_dir: 'logs'
             offline: true
             project: gLM_PPI_XAI
-            name: 'simple'
+            name: 'Bernett2022_1k'
             log_model: false
             prefix: ''
     enable_checkpointing: true
