Prepared the code for EntropyFactors computation. Updated the configs. Unified the visualisation colouring of entropy factors' correction.

--- a/configs/Bernett2022_1k_entropy_factors.yaml
+++ b/configs/Bernett2022_1k_entropy_factors.yaml
@@ -3,9 +3,9 @@ model:
     class_path: gLM.models.gLM2
     init_args:
         model: 
-            class_path: gLM.models.EntropyMatrix
+            class_path: gLM.models.EntropyFactors
             init_args:
-                matrix_path: ./outputs/entropy_matrices/
+                matrix_path: ./outputs/entropy_factors/
 data:
     class_path: gLM.dataloader.SequencePairDataModule
     init_args:
