Added laoding of the batches and avoidance of TOKENIZER warnings. Also, predictions are loaded to CPU.

--- a/configs/simple/mean_pooled_emb.yaml
+++ b/configs/simple/mean_pooled_emb.yaml
@@ -3,19 +3,20 @@ model:
     class_path: gLM.models.gLM2
     init_args:
         model: 
-            class_path: gLM.models.MutationEntropyMatrix
+            class_path: gLM.models.PooledEmbeddings
             init_args:
-                fast: true
-                matrix_path: ./outputs/entropy_matrices/
+                emb_path: ./data/simple/per_res_emb/
 data:
     class_path: gLM.dataloader.SequencePairDataModule
     init_args:
-        fasta_file: ./data/Bernett2022/human_swissprot_oneliner.fasta
-        data_folder: ./data/Bernett2022/
+        fasta_file: ./data/simple/sequences.fasta
+        data_folder: ./data/simple/
         batch_size: 4096
         positive_only: false
-        num_workers: 0
+        num_workers: 8
         num_samples: null
+        emb_dir: ./data/simple/per_res_emb/
+        batch_dir: ./data/simple/per_res_emb/batches/
 optimizer:
     class_path: torch.optim.Adam
     init_args:
@@ -30,7 +31,7 @@ trainer:
             save_dir: 'logs'
             offline: true
             project: gLM_PPI_XAI
-            name: 'Bernett2022_1k_entropy'
+            name: 'simple_mean_pooled'
             log_model: false
             prefix: ''
     enable_checkpointing: true
@@ -56,15 +57,17 @@ trainer:
             - calibration_curves
             - classification_report
             - mcc
-            - roc
+            - roc_auc
+            - pr_auc
       - class_path: pytorch_lightning.callbacks.ModelCheckpoint
         init_args:
-            dirpath: logs/checkpoints/optimized/
+            dirpath: logs/simple/checkpoints/optimized/
             filename: model-{epoch}
             monitor: val/loss
             mode: min
             save_last: true
             save_top_k: 1
+
 
 
 
