--- a/configs/Bernett2022_1k_entropy_factors.yaml
+++ b/configs/Bernett2022_1k_entropy_factors.yaml
@@ -3,13 +3,13 @@ model:
     class_path: gLM.models.gLM2
     init_args:
         model: 
-            class_path: gLM.models.PooledEmbeddings
+            class_path: gLM.models.EntropyFactors
             init_args:
-                emb_path: ./outputs/per_res_embeddings/
+                matrix_path: ./outputs/entropy_factors/
 data:
     class_path: gLM.dataloader.SequencePairDataModule
     init_args:
-        fasta_file: ./data/Bernett2022/human_swissprot_oneliner.fasta 
+        fasta_file: ./data/Bernett2022/human_swissprot_oneliner.fasta
         data_folder: ./data/Bernett2022/
         batch_size: 4096
         positive_only: false
@@ -19,12 +19,9 @@ optimizer:
     class_path: torch.optim.Adam
     init_args:
         lr: 0.001
-        weight_decay: 0.01
-        betas:
-        - 0.9
-        - 0.98
+        weight_decay: 0.0001
 trainer:
-    max_epochs: 100
+    max_epochs: 1
     deterministic: true
     logger:
         class_path: pytorch_lightning.loggers.WandbLogger
@@ -32,9 +29,9 @@ trainer:
             save_dir: 'logs'
             offline: true
             project: gLM_PPI_XAI
-            name: 'Bernett2022_pooled_embeddings'
+            name: 'Bernett2022_1k_avg_entropy'
             log_model: false
-            prefix: 'mean-pool'
+            prefix: ''
     enable_checkpointing: true
     callbacks:
       - class_path: gLM.callbacks.SetupWandB 
@@ -50,7 +47,7 @@ trainer:
           y_pred_lab_key: predicted_label
           y_true_lab_key: label
           make_one_hot: true
-          invert_probabilities: false
+          invert_probabilities: true
           make_correct_dim: true
           metrics_to_plot:
             - confusion_matrix
@@ -58,8 +55,7 @@ trainer:
             - calibration_curves
             - classification_report
             - mcc
-            - roc_auc
-            - pr_auc
+            - roc
       - class_path: pytorch_lightning.callbacks.ModelCheckpoint
         init_args:
             dirpath: logs/checkpoints/optimized/
@@ -67,8 +63,7 @@ trainer:
             monitor: val/loss
             mode: min
             save_last: true
-            save_top_k: 10
-
+            save_top_k: 1
 
 
 
