Adjusted the code to run the generation of MINT CJs within PyTorch-Lightning framework.

--- a/configs/PINDER/eubacteria_5_1024_512/glm2_cosine_fastCJ.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512/glm2_cosine_fastCJ.yaml
@@ -6,6 +6,7 @@ model:
             class_path: gLM.models.CategoricalJacobian
             init_args:
                 model_path: "./gLM2_650M/"
+                config_path: ""
                 fast: true
                 matrix_path: ./outputs/categorical_jacobians/cosine/
                 distance: "cosine"
