--- a/configs/PINDER/eubacteria_5_1024_512/esm2_cosine_fastCJ.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512/esm2_cosine_fastCJ.yaml
@@ -6,6 +6,7 @@ model:
             class_path: gLM.models.CategoricalJacobian
             init_args:
                 model_path: "./esm2_t33_650M_UR50D/"
+                config_path: ""
                 fast: true
                 matrix_path: ./outputs/categorical_jacobians/esm2_cosine/
                 distance: "cosine"
