Added the current version of heterodimers data set creation and the updated config files for fitting and testing PPIPredictors.

--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/test/glm2_mean_pooled.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/test/glm2_mean_pooled.yaml
@@ -33,9 +33,9 @@ trainer:
             save_dir: 'logs'
             offline: true
             project: gLM_PPI_XAI
-            name: 'PINDER-eubacteria-sp-hetero-gLM2'
+            name: 'PINDER-bact-sp-hetero-gLM2-mean-hetero-test'
             log_model: false
-            prefix: 'pooled-emb'
+            prefix: 'gLM2'
     enable_checkpointing: true
     callbacks:
       - class_path: gLM.callbacks.SetupWandB
