--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/mint_mean_pooled.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/mint_mean_pooled.yaml
@@ -33,9 +33,9 @@ trainer:
             save_dir: 'logs'
             offline: true
             project: gLM_PPI_XAI
-            name: 'PINDER-eubacteria-sp-hetero-MINT'
+            name: 'PINDER-bact-sp-hetero-MINT-mean'
             log_model: false
-            prefix: 'pooled-emb'
+            prefix: 'MINT'
     enable_checkpointing: true
     callbacks:
       - class_path: gLM.callbacks.SetupWandB
