--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/test_mixed/esm2_3rd_pool.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/test_mixed/esm2_3rd_pool.yaml
@@ -33,9 +33,9 @@ trainer:
             save_dir: 'logs'
             offline: true
             project: gLM_PPI_XAI
-            name: 'PINDER-eubacteria-sp-hetero-ESM2-mixed-test'
+            name: 'PINDER-bact-sp-hetero-ESM2-3rd-mean-mixed-test'
             log_model: false
-            prefix: '3rd-pooled-emb'
+            prefix: 'ESM2'
     enable_checkpointing: true
     callbacks:
       - class_path: gLM.callbacks.SetupWandB
