--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_logits_cnn.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_logits_cnn.yaml
@@ -9,12 +9,17 @@ model:
                 config_path: ""
                 fast: true
                 tensor_path: ./outputs/logits_tensors/glm2/
+        model:
+            class_path: gLM_CNN.models.LogitsTensorCNN
+            init_args:
+                tensor_dim: 1026
+                num_in_channels: 48            
 data:
     class_path: gLM.dataloader.SequencePairCJDataModule
     init_args:
         fasta_file: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/sequences.fasta
         data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/
-        batch_size: 8192
+        batch_size: 32
         positive_only: false
         num_workers: 4
         num_samples: null
