--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_logits_cnn.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_logits_cnn.yaml
@@ -15,10 +15,11 @@ model:
                 tensor_dim: 1026
                 num_in_channels: 48            
 data:
-    class_path: gLM.dataloader.SequencePairCJDataModule
+    class_path: gLM_CNN.dataloader.UQRDataModule
     init_args:
         fasta_file: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/sequences.fasta
         data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/
+        uqr_folder: ./outputs/logits_tensors/glm2/ 
         batch_size: 32
         positive_only: false
         num_workers: 4
