--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/esm2_logits_cnn.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/esm2_logits_cnn.yaml
@@ -19,7 +19,8 @@ data:
     init_args:
         fasta_file: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/sequences.fasta
         data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/
-        urq_folder: ./outputs/logits_tensors/esm2/
+        urq_folder: ./outputs/urqs/contact_maps/
+        tensor_dir: ./outputs/logits_tensors/esm2/
         batch_size: 32
         positive_only: false
         num_workers: 4
@@ -48,6 +49,11 @@ trainer:
       - class_path: gLM.callbacks.OutputLoggingCallback
         init_args:
             log_every_n_steps: 1
+      - class_path: pytorch_lightning.callbacks.EarlyStopping
+        init_args:
+            patience: 5
+            monitor: validate/loss
+            mode: min
       - class_path: gLM.callbacks.LogClassificationMetrics
         init_args:
           class_names:
@@ -75,4 +81,3 @@ trainer:
             mode: min
             save_last: true
             save_top_k: 1
-ckpt_path: logs/LogitsTensorsCNN/ESM2/checkpoints/optimized/last.ckpt
