--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_logits_cnn.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_logits_cnn.yaml
@@ -20,6 +20,7 @@ data:
         fasta_file: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/sequences.fasta
         data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/
         urq_folder: ./outputs/urqs/contact_maps/
+        tensor_dir: ./outputs/logits_tensors/glm2/
         batch_size: 32
         positive_only: false
         num_workers: 4
@@ -44,7 +45,12 @@ trainer:
             prefix: 'gLM2'
     enable_checkpointing: true
     callbacks:
-      - class_path: gLM.callbacks.SetupWandB 
+      - class_path: gLM.callbacks.SetupWandB
+      - class_path: pytorch_lightning.callbacks.EarlyStopping
+        init_args:
+            patience: 5
+            monitor: validate/loss
+            mode: min
       - class_path: gLM.callbacks.OutputLoggingCallback
         init_args:
             log_every_n_steps: 1
