--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/mint_logits_cnn.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/mint_logits_cnn.yaml
@@ -20,7 +20,8 @@ data:
     init_args:
         fasta_file: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/sequences.fasta
         data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/
-        urq_folder: ./outputs/logits_tensors/mint/
+        urq_folder: ./outputs/urqs/contact_maps/
+        tensor_dir: ./outputs/logits_tensors/mint/
         batch_size: 32
         positive_only: false
         num_workers: 4
@@ -49,6 +50,11 @@ trainer:
       - class_path: gLM.callbacks.OutputLoggingCallback
         init_args:
             log_every_n_steps: 1
+      - class_path: pytorch_lightning.callbacks.EarlyStopping
+        init_args:
+            patience: 5
+            monitor: validate/loss
+            mode: min
       - class_path: gLM.callbacks.LogClassificationMetrics
         init_args:
           class_names:
