--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/esm2_cosine_cj_cnn.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/esm2_cosine_cj_cnn.yaml
@@ -5,36 +5,36 @@ model:
         logits_model: 
             class_path: gLM_CNN.models.CategoricalJacobianGenerator
             init_args:
-                model_path: "./gLM2_650M/"
+                model_path: "./esm2_t33_650M_UR50D/"
                 config_path: ""
-                cj_path: ./outputs/categorical_jacobians/glm2_cosine_post250521/
+                cj_path: ./outputs/categorical_jacobians/esm2_cosine_post250521/
                 cj_type: fast
                 distance: cosine
                 sep_chains: true
-                n: 3
-                max_L: 1026
+                n: 0.03125
+                max_L: 1027
         model:
             class_path: gLM_CNN.models.CategoricalJacobianCNN
             init_args:
-                matrix_dim: 1026
+                matrix_dim: 1027
 data:
     class_path: gLM_CNN.dataloader.URQDataModule
     init_args:
         fasta_file: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/sequences.fasta
         data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/
         urq_folder: ./outputs/urqs/contact_maps/
-        tensor_dir: ./outputs/categorical_jacobians/glm2_cosine_post250521/
+        tensor_dir: ./outputs/categorical_jacobians/esm2_cosine_post250521/
         batch_size: 32
         positive_only: false
         num_workers: 4
         num_samples: null
-        concat_type: "gLM2"
+        concat_type: "pLM"
 optimizer:
     class_path: torch.optim.Adam
     init_args:
         lr: 0.0003
 trainer:
-    max_epochs: 200
+    max_epochs: 100
     deterministic: true
     logger:
         class_path: pytorch_lightning.loggers.WandbLogger
@@ -42,15 +42,15 @@ trainer:
             save_dir: 'logs'
             offline: true
             project: gLM_PPI_XAI
-            name: 'CategoricalJacobianCNN-smaller'
+            name: 'CategoricalJacobianCNN'
             log_model: false
-            prefix: 'gLM2'
+            prefix: 'ESM2'
     enable_checkpointing: true
     callbacks:
       - class_path: gLM.callbacks.SetupWandB
       - class_path: pytorch_lightning.callbacks.EarlyStopping
         init_args:
-            patience: 10
+            patience: 5
             monitor: validate/loss
             mode: min
       - class_path: gLM.callbacks.OutputLoggingCallback
