--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_logits_cnn.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_logits_cnn.yaml
@@ -21,16 +21,15 @@ data:
         data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/
         urq_folder: ./outputs/urqs/contact_maps/
         tensor_dir: ./outputs/logits_tensors/glm2/
-        batch_size: 32
+        batch_size: 16
         positive_only: false
         num_workers: 4
-        num_samples: null
+        num_samples: 10
         concat_type: "gLM2"
 optimizer:
     class_path: torch.optim.Adam
     init_args:
-        lr: 0.001
-        weight_decay: 0.0001
+        lr: 0.0003
 trainer:
     max_epochs: 1000
     deterministic: true
@@ -53,9 +52,6 @@ trainer:
             mode: min
       - class_path: gLM.callbacks.OutputLoggingCallback
         init_args:
-            log_every_n_steps: 1
-      - class_path: gLM.callbacks.LogClassificationMetrics
-        init_args:
           class_names:
           - 'Negative'
           - 'Positive'
@@ -73,6 +69,7 @@ trainer:
             - mcc
             - roc_auc
             - pr_auc
+          log_every_n_steps: 1
       - class_path: pytorch_lightning.callbacks.ModelCheckpoint
         init_args:
             dirpath: logs/LogitsTensorsCNN/gLM2/checkpoints/optimized/
