--- a/configs/TASmania/mycobacterium_tuberculosis/glm2_cosine_fastCJ.yaml
+++ b/configs/TASmania/mycobacterium_tuberculosis/glm2_cosine_fastCJ.yaml
@@ -5,27 +5,22 @@ model:
         model: 
             class_path: gLM.models.CategoricalJacobian
             init_args:
-                model_path: "./esm2_t33_650M_UR50D/"
+                model_path: "./gLM2_650M/"
                 config_path: ""
                 fast: true
-                matrix_path: ./outputs/categorical_jacobians/esm2_cosine/
+                matrix_path: ./outputs/categorical_jacobians/glm2_cosine_post250521/
                 distance: "cosine"
-                n: 0.03125
+                n: 3
 data:
     class_path: gLM.dataloader.SequencePairCJDataModule
     init_args:
-        fasta_file: ./data/PINDER/eubacteria_5_1024_512_species_harder_test/sequences.fasta
-        data_folder: ./data/PINDER/eubacteria_5_1024_512_species_harder_test/
-        batch_size: 4096
+        fasta_file: ./data/TASmania/mycobacterium_tuberculosis/sequences.fasta
+        data_folder: ./data/TASmania/mycobacterium_tuberculosis/
+        batch_size: 256
         positive_only: false
         num_workers: 4
-        num_samples: 1
-        concat_type: "pLM"
-optimizer:
-    class_path: torch.optim.Adam
-    init_args:
-        lr: 0.001
-        weight_decay: 0.0001
+        num_samples: null
+        concat_type: "gLM2"
 trainer:
     max_epochs: 1
     deterministic: true
@@ -35,7 +30,7 @@ trainer:
             save_dir: 'logs'
             offline: true
             project: gLM_PPI_XAI
-            name: 'PINDER-bact-5-1024-512-sp-harder-test-ESM2'
+            name: 'TASmania/mycobacterium_tuberculosis/gLM2'
             log_model: false
             prefix: 'cosine-fastCJ'
     enable_checkpointing: true
@@ -63,7 +58,7 @@ trainer:
           log_every_n_steps: 1
       - class_path: pytorch_lightning.callbacks.ModelCheckpoint
         init_args:
-            dirpath: logs/PINDER/eubacteria_5_1024_512_species/checkpoints/optimized/
+            dirpath: logs/TASmania/mycobacterium_tuberculosis/gLM2/checkpoints/optimized/
             filename: model-{epoch}
             monitor: validate/loss
             mode: min
