Trying the 5fold set-up to evaluate the best version from the explorations.

--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/dropout0.1.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/dropout0.1.yaml
@@ -36,9 +36,9 @@ data:
         batch_size: 16
         positive_only: false
         num_workers: 4
-        num_samples: 8
+        num_samples: null
         concat_type: "gLM2"
-        kfolds: 1
+        kfolds: 5
         kfold_idx: 0
         seed: 42
 optimizer:
