--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_0.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_0.yaml
@@ -36,7 +36,7 @@ data:
         batch_size: 16
         positive_only: false
         num_workers: 4
-        num_samples: 8
+        num_samples: null
         concat_type: "gLM2"
         kfolds: 5
         kfold_idx: 0
