--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_00/base.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_00/base.yaml
@@ -30,10 +30,10 @@ data:
         data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/
         urq_folder: ./outputs/urqs/contact_maps/
         tensor_dir: ./outputs/categorical_jacobians/glm2_cosine_post250521/
-        batch_size: 16
+        batch_size: 8
         positive_only: false
         num_workers: 4
-        num_samples: 8
+        num_samples: null
         concat_type: "gLM2"
         kfolds: 5
         kfold_idx: 0
@@ -45,13 +45,14 @@ optimizer:
 trainer:
     max_epochs: 200
     deterministic: true
+    accumulate_grad_batches: 2
     logger:
         class_path: pytorch_lightning.loggers.WandbLogger
         init_args:
-            save_dir: 'logs'
+            save_dir: logs/CategoricalJacobianCNN/Sigmoid_CV_I_00/gLM2/0/
             offline: true
             project: gLM_PPI_XAI
-            name: 'CategoricalJacobianCNN-Sigmoid-CV-I'
+            name: 'CategoricalJacobianCNN/Sigmoid_CV_I'
             log_model: false
             prefix: 'gLM2'
     enable_checkpointing: true
@@ -64,7 +65,7 @@ trainer:
             mode: min
       - class_path: pytorch_lightning.callbacks.ModelCheckpoint
         init_args:
-            dirpath: logs/CategoricalJacobianCNN-Sigmoid-CV-I/gLM2/checkpoints/optimized/
+            dirpath: logs/CategoricalJacobianCNN/Sigmoid_CV_I_00/gLM2/0/checkpoints/
             filename: model-{epoch}
             monitor: validate/loss
             mode: min
@@ -90,4 +91,4 @@ trainer:
               - roc_auc
               - pr_auc
             log_every_n_steps: 1
-            metric_log_file: logs/CategoricalJacobianCNN-Sigmoid-CV-I/gLM2/5foldCV_0_metrics.csv
+            metric_log_file: logs/CategoricalJacobianCNN/Sigmoid_CV_I_00/gLM2/0/metrics.csv
