--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Softmax_CV_I_02/gpu_2.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Softmax_CV_I_02/gpu_2.yaml
@@ -18,12 +18,9 @@ model:
             init_args:
                 matrix_dim: 1026
                 loss: "CE"
-                kernel_sizes:
-                  - 3
-                strides:
-                  - 1
-                out_channels:
-                  - 128
+                kernel_sizes: [3, 3, 3]
+                strides: [1, 1, 1]
+                out_channels: [128, 128, 128]
                 num_linear_layers: 1
                 dropout: 0.1
 data:
@@ -33,13 +30,13 @@ data:
         data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers/
         urq_folder: ./outputs/urqs/contact_maps/
         tensor_dir: ./outputs/categorical_jacobians/glm2_cosine_post250521/
-        batch_size: 16
+        batch_size: 8
         positive_only: false
         num_workers: 4
         num_samples: null
         concat_type: "gLM2"
         kfolds: 5
-        kfold_idx: 4
+        kfold_idx: 2
         seed: 42
 optimizer:
     class_path: torch.optim.Adam
@@ -48,13 +45,14 @@ optimizer:
 trainer:
     max_epochs: 200
     deterministic: true
+    accumulate_grad_batches: 2
     logger:
         class_path: pytorch_lightning.loggers.WandbLogger
         init_args:
             save_dir: 'logs'
             offline: true
             project: gLM_PPI_XAI
-            name: 'CategoricalJacobianCNN-Softmax-CV-I'
+            name: 'CategoricalJacobianCNN_Softmax_CV_I_02_GPU'
             log_model: false
             prefix: 'gLM2'
     enable_checkpointing: true
@@ -67,7 +65,7 @@ trainer:
             mode: min
       - class_path: pytorch_lightning.callbacks.ModelCheckpoint
         init_args:
-            dirpath: logs/CategoricalJacobianCNN-Softmax-CV-I/gLM2/checkpoints/optimized/
+            dirpath: logs/CategoricalJacobianCNN_Softmax_CV_I_02/gLM2_gpu/checkpoints/optimized/
             filename: model-{epoch}
             monitor: validate/loss
             mode: min
@@ -93,4 +91,4 @@ trainer:
               - roc_auc
               - pr_auc
             log_every_n_steps: 1
-            metric_log_file: logs/CategoricalJacobianCNN-Softmax-CV-I/gLM2/5foldCV_4_metrics.csv
+            metric_log_file: logs/CategoricalJacobianCNN_Softmax_CV_I_02/gLM2_gpu/5foldCV_2_metrics.csv
