--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Softmax_CV_I_00/2.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Softmax_CV_I_00/2.yaml
@@ -18,9 +18,9 @@ model:
             init_args:
                 matrix_dim: 1026
                 loss: "CE"
-                kernel_sizes: [3, 3, 3]
-                strides: [1, 1, 1]
-                out_channels: [128, 128, 128]
+                kernel_sizes: [3]
+                strides: [1]
+                out_channels: [128]
                 num_linear_layers: 1
                 dropout: 0.1
 data:
@@ -36,7 +36,7 @@ data:
         num_samples: null
         concat_type: "gLM2"
         kfolds: 5
-        kfold_idx: 3
+        kfold_idx: 2
         seed: 42
 optimizer:
     class_path: torch.optim.Adam
@@ -49,10 +49,10 @@ trainer:
     logger:
         class_path: pytorch_lightning.loggers.WandbLogger
         init_args:
-            save_dir: 'logs'
+            save_dir: logs/CategoricalJacobianCNN/Softmax_CV_I_00/gLM2/2/
             offline: true
             project: gLM_PPI_XAI
-            name: 'CategoricalJacobianCNN_Softmax_CV_I_02_GPU'
+            name: 'CategoricalJacobianCNN/Softmax_CV_I'
             log_model: false
             prefix: 'gLM2'
     enable_checkpointing: true
@@ -65,7 +65,7 @@ trainer:
             mode: min
       - class_path: pytorch_lightning.callbacks.ModelCheckpoint
         init_args:
-            dirpath: logs/CategoricalJacobianCNN_Softmax_CV_I_02/gLM2_gpu/checkpoints/optimized/
+            dirpath: logs/CategoricalJacobianCNN/Softmax_CV_I_00/gLM2/2/checkpoints/
             filename: model-{epoch}
             monitor: validate/loss
             mode: min
@@ -91,4 +91,4 @@ trainer:
               - roc_auc
               - pr_auc
             log_every_n_steps: 1
-            metric_log_file: logs/CategoricalJacobianCNN_Softmax_CV_I_02/gLM2_gpu/5foldCV_3_metrics.csv
+            metric_log_file: logs/CategoricalJacobianCNN/Softmax_CV_I_00/gLM2/2/metrics.csv
