Running Sigmoid model's 10-I experiment.

--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_10/0.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_10/0.yaml
@@ -41,8 +41,8 @@ data:
     tensor_dir: ./outputs/categorical_jacobians/glm2_cosine_post250521/
     batch_size: 8
     positive_only: false
-    num_workers: 4
-    num_samples: null
+    num_workers: 1
+    num_samples: 500
     concat_type: gLM2
     kfolds: 5
     kfold_idx: 0
