Running Sigmoid model's 10-I experiment.

--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_10/0.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_10/0.yaml
@@ -59,7 +59,7 @@ trainer:
     class_path: pytorch_lightning.loggers.WandbLogger
     init_args:
       save_dir: logs/CategoricalJacobianCNN/Sigmoid_CV_I_10/gLM2/0/
-      offline: true
+      offline: false
       project: gLM_PPI_XAI
       name: CategoricalJacobianCNN/Sigmoid_CV_I_10
       log_model: false
