Found removed log_every_n_steps. Setting back to 1.

--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_10/0.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/glm2_cosine_cj_cnn/Sigmoid_CV_I_10/0.yaml
@@ -55,6 +55,7 @@ trainer:
   max_epochs: 5
   deterministic: true
   accumulate_grad_batches: 1
+  log_every_n_steps: 1
   logger:
     class_path: pytorch_lightning.loggers.WandbLogger
     init_args:
