--- a/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/separate_pooling/gLM2/CV/3.yaml
+++ b/configs/PINDER/eubacteria_5_1024_512_species_heterodimers/separate_pooling/gLM2/CV/3.yaml
@@ -5,20 +5,20 @@ model:
     model:
       class_path: gLM.models.PredictorPPI
       init_args:
-        emb_dim: 1280
+        emb_dim: 2560
         hid_size: 640
 data:
   class_path: gLM.dataloader.EmbeddingsDataModule
   init_args:
     data_folder: ./data/PINDER/eubacteria_5_1024_512_species_heterodimers
-    pt_folder: ./embeddings/PINDER/eubacteria_5_1024_512_species_heterodimers/joint_pooling/esm2_t33_650M_UR50D/
+    pt_folder: ./embeddings/PINDER/eubacteria_5_1024_512_species_heterodimers/separate_pooling/gLM2_650M/
     batch_size: 32
     positive_only: false
     num_workers: 4
     num_samples: null
-    concat_type: pLM
+    concat_type: gLM2
     kfolds: 5
-    kfold_idx: 1
+    kfold_idx: 3
     seed: 42
 optimizer:
   class_path: torch.optim.Adam
@@ -36,10 +36,10 @@ trainer:
   logger:
     class_path: pytorch_lightning.loggers.WandbLogger
     init_args:
-      save_dir: logs/gLM.models.PredictorPPI/PINDER/eubacteria_5_1024_512_species_heterodimers/joint_pooling/ESM2/1/
+      save_dir: logs/gLM.models.PredictorPPI/PINDER/eubacteria_5_1024_512_species_heterodimers/separate_pooling/gLM2/3/
       offline: true
       project: gLM_PPI_XAI
-      name: PINDER/eubacteria_5_1024_512_species_heterodimers/joint_pooling/ESM2/1/
+      name: PINDER/eubacteria_5_1024_512_species_heterodimers/separate_pooling/gLM2/3/
       log_model: false
       prefix: CV
   enable_checkpointing: true
@@ -51,7 +51,7 @@ trainer:
       mode: min
   - class_path: pytorch_lightning.callbacks.ModelCheckpoint
     init_args:
-      dirpath: logs/gLM.models.PredictorPPI/PINDER/eubacteria_5_1024_512_species_heterodimers/joint_pooling/ESM2/1/checkpoints/
+      dirpath: logs/gLM.models.PredictorPPI/PINDER/eubacteria_5_1024_512_species_heterodimers/separate_pooling/gLM2/3/checkpoints/
       filename: model-{epoch}
       monitor: validate/loss
       mode: min
@@ -77,4 +77,4 @@ trainer:
       - roc_auc
       - pr_auc
       log_every_n_steps: 1
-      metric_log_file: logs/gLM.models.PredictorPPI/PINDER/eubacteria_5_1024_512_species_heterodimers/joint_pooling/ESM2/1/metrics.csv
+      metric_log_file: logs/gLM.models.PredictorPPI/PINDER/eubacteria_5_1024_512_species_heterodimers/separate_pooling/gLM2/3/metrics.csv
