Started implementing the train_validate.sh. Implemented adjusting of the parent base.yaml for the full training. Next step is to determine the max. num. epochs to train the model for and remove EarlyStopping.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ baseline_models/
 esm2_t33_650M_UR50D/
 mint/mint/model/mint.ckpt
 
+configs/**/*.yaml
 **/*.out
 **/__pycache__
 **/.ipynb_checkpoints/
