--- a/configs/Bernett2022_1k/glm2_Euclidean_fastCJ.yaml
+++ b/configs/Bernett2022_1k/glm2_Euclidean_fastCJ.yaml
@@ -1,69 +1,71 @@
-seed_everything: 42
-model:
-    class_path: gLM.models.gLM2
-    init_args:
-        model: 
-            class_path: gLM.models.CategoricalJacobian
-            init_args:
-                fast: true
-                matrix_path: ./outputs/categorical_jacobians/glm2_Euclidean/
-                distance: "Euclidean"
 data:
-    class_path: gLM.dataloader.SequencePairCJDataModule
-    init_args:
-        fasta_file: ./data/Bernett2022/human_swissprot_oneliner.fasta
-        data_folder: ./data/Bernett2022_1k/
-        batch_size: 4096
-        positive_only: false
-        num_workers: 4
-        num_samples: null
+  class_path: gLM.dataloader.SequencePairCJDataModule
+  init_args:
+    batch_size: 8192
+    concat_type: gLM2
+    data_folder: ./data/Bernett2022_1k/
+    fasta_file: ./data/Bernett2022/human_swissprot_oneliner.fasta
+    num_samples: null
+    num_workers: 4
+    positive_only: false
+model:
+  class_path: gLM.models.gLM2
+  init_args:
+    model:
+      class_path: gLM.models.CategoricalJacobian
+      init_args:
+        config_path: ./mint/mint/model/esm2_t33_650M_UR50D.json
+        distance: Euclidean
+        fast: true
+        matrix_path: ./outputs/categorical_jacobians/glm2_Euclidean/
+        model_path: ./gLM2_650M/
+        n: 0.5
 optimizer:
-    class_path: torch.optim.Adam
-    init_args:
-        lr: 0.001
-        weight_decay: 0.0001
+  class_path: torch.optim.Adam
+  init_args:
+    lr: 0.001
+    weight_decay: 0.0001
+seed_everything: 42
 trainer:
-    max_epochs: 1
-    deterministic: true
-    logger:
-        class_path: pytorch_lightning.loggers.WandbLogger
-        init_args:
-            save_dir: 'logs'
-            offline: true
-            project: gLM_PPI_XAI
-            name: 'Bernett2022_1k'
-            log_model: false
-            prefix: 'Euclidean-fastCJ'
-    enable_checkpointing: true
-    callbacks:
-      - class_path: gLM.callbacks.SetupWandB 
-      - class_path: gLM.callbacks.OutputLoggingCallback
-        init_args:
-            log_every_n_steps: 1
-      - class_path: gLM.callbacks.LogClassificationMetrics
-        init_args:
-          class_names:
-          - 'Negative'
-          - 'Positive'
-          y_pred_key: predictions
-          y_pred_lab_key: predicted_label
-          y_true_lab_key: label
-          make_one_hot: true
-          invert_probabilities: false
-          make_correct_dim: true
-          metrics_to_plot:
-            - confusion_matrix
-            - class_proportions
-            - calibration_curves
-            - classification_report
-            - mcc
-            - roc_auc
-            - pr_auc
-      - class_path: pytorch_lightning.callbacks.ModelCheckpoint
-        init_args:
-            dirpath: logs/Bernett2022_1k/checkpoints/optimized/
-            filename: model-{epoch}
-            monitor: validate/loss
-            mode: min
-            save_last: true
-            save_top_k: 1
+  callbacks:
+  - class_path: gLM.callbacks.OutputLoggingCallback
+    init_args:
+      class_names:
+      - Negative
+      - Positive
+      invert_probabilities: false
+      log_every_n_steps: 1
+      make_correct_dim: true
+      make_one_hot: true
+      metric_log_file: logs/CategoricalJacobian/Bernett2022_1k/Euclidean_fast_categorical_jacobian/test/gLM2/metrics.csv
+      metrics_to_plot:
+      - confusion_matrix
+      - class_proportions
+      - calibration_curves
+      - classification_report
+      - mcc
+      - roc_auc
+      - pr_auc
+      y_pred_key: predictions
+      y_pred_lab_key: predicted_label
+      y_true_lab_key: label
+  - class_path: pytorch_lightning.callbacks.ModelCheckpoint
+    init_args:
+      dirpath: logs/CategoricalJacobian/Bernett2022_1k/Euclidean_fast_categorical_jacobian/test/gLM2/
+      filename: model-{epoch}
+      mode: min
+      monitor: validate/loss
+      save_last: true
+      save_top_k: 1
+  deterministic: true
+  enable_checkpointing: true
+  logger:
+    class_path: pytorch_lightning.loggers.WandbLogger
+    init_args:
+      log_model: false
+      name: Bernett2022_1k/Euclidean_fast_categorical_jacobian/test/gLM2/
+      offline: true
+      prefix: test
+      project: gLM_PPI_XAI
+      save_dir: logs/CategoricalJacobian/Bernett2022_1k/Euclidean_fast_categorical_jacobian/test/gLM2/
+  max_epochs: 1
